--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,9 @@ target_link_libraries(svgeezer_lib PUBLIC
 	)
 
 add_executable(tinker tinker.cpp)
+target_link_libraries(tinker PUBLIC
+		CONAN_PKG::opencv
+		)
 
 # target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/lib")
 # install (TARGETS svgeezer DESTINATION ${INSTALL_PREFIX}/bin)
