--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,10 @@ target_link_libraries(svgeezer_lib PUBLIC
 	CONAN_PKG::opencv
 	)
 
-add_executable(tinker tinker.cpp)
+add_executable(tinker
+		tinker.cpp
+		simple_svg_1.0.0.hpp
+		)
 target_link_libraries(tinker PUBLIC
 		CONAN_PKG::opencv
 		)
